perf: cache frequently accessed values